# v0.11.3 (unreleased)
#######################################################################
Improvements to error handling and portability; add --no-dep-tags option to
wadf-reprocess

New features:
- #203: Add workaround for PEAR bug #13425 (Dep package install fails when 2 
  vers of dep exist, even when depchain is OK)
- #201: Allow wadf-undeploy to take "-d opt=value" options

Bugs fixed:
- #187: wadf-undeploy does not correctly remove databases

Changes/improvements:
- #175: Deploying a database without a schema.sql fails even if dbX_schema is 
  empty
- #177: Add handling of schema import errors
- #175: Deploying a database without a schema.sql fails even if dbX_schema is
  empty
- #195: Add --no-dep-tags option to wadf-reprocess
- #196: Rewrite template handling to remove dependency on UNIX "find" command
  (for portability)
- #198: Improve general error handling

#######################################################################
# v0.11.2 (11 Feb 2009)
#######################################################################
Remove some debugging output that appears when deploying using a dependency
tags file; it was inadvertently left in. No functional changes.

Bugs fixed:
- #164: Debugging output present when using dependency tags file


#######################################################################
# v0.11.1 (2 Feb 2009)
#######################################################################
Fix a silly bug introduced with some refactoring in 0.11.0, improve the
performance when deploying PEAR dependencies using dependency tags and make
undeployment more reliable.

Bugs fixed:
- #158: E_NOTICES relating to standalone_pear
- Fix wadf-undeploy so that database details are prompted for if necessary

Changes/improvements:
- #157: When deploying PEAR dependencies from dependency tags, check if they are
  already installed before force-installing 
- #160: wadf-deploy / reprocess should use dependency tags exclusively if they 
  are defined